--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 xcuserdata/
 
 ## API Settings
-NetworkClient/Constants.swift
+Constants.swift
 bfg.jar
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
